--- a/www/home.html
+++ b/www/home.html
@@ -1,9 +1,20 @@
 <html>
-	<ons-page id="home">
+
+<ons-page id="home">
   <ons-toolbar id="home-toolbar">
     <div class="center">Home</div>
+    <div class="left">
+  		<ons-toolbar-button onclick="openMenu()">
+    	<ons-icon icon="md-menu"></ons-icon>
+  </ons-toolbar-button>
+</div>
   </ons-toolbar>
 
   Hello!
+  <script>
+	  const openMenu = () => {
+	    document.querySelector('#menu').open();
+	  };
+	</script>
 </ons-page>
 </html>
